vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_unused_or_block_before_infix.vv
import v.embed_file

fn maybe_file() ?embed_file.EmbedFileData {
	return none
}

fn main() {
	fallback := $embed_file(@FILE)

	maybe_file() or {
		// fallback value
		$embed_file(@FILE)
	} == fallback
}
